Fixed Library centering on mobile

--- a/thecocktailcompanion/static/assets/styles/style.css
+++ b/thecocktailcompanion/static/assets/styles/style.css
@@ -81,6 +81,13 @@ nav {
   #heroLogo {
     overflow: hidden;
   }
+
+  .cardLibrary {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
 }
 
 /*--------------------------------------------------- WELCOME */
